Folded test_ratio into scilint. Updated botocore and some formatting changes

--- a/nbs/export_named.ipynb
+++ b/nbs/export_named.ipynb
@@ -35,7 +35,6 @@
     "import nbformat\n",
     "from fastcore.script import call_parse\n",
     "from nbdev.export import (\n",
-    "    get_config,\n",
     "    _add2all,\n",
     "    _deal_import,\n",
     "    _from_future_import,\n",
@@ -47,6 +46,7 @@
     "    export_names,\n",
     "    extra_add,\n",
     "    find_default_export,\n",
+    "    get_config,\n",
     "    get_nbdev_module,\n",
     "    notebook2script,\n",
     "    read_nb,\n",
@@ -236,7 +236,7 @@
     "\n",
     "def _sciflow_notebook2script(fname, modules, silent=False, to_dict=None, bare=False):\n",
     "    \"Finds cells starting with `#export` and puts them into a module created by `create_mod_files`\"\n",
-    "    bare = str(get_config().get('bare', bare)) == 'True'\n",
+    "    bare = str(get_config().get(\"bare\", bare)) == \"True\"\n",
     "    if os.environ.get(\"IN_TEST\", 0):\n",
     "        return  # don't export if running tests\n",
     "    sep = \"\\n\" * (int(get_config().get(\"cell_spacing\", \"1\")) + 1)\n",
