--- a/nbs/packaging.ipynb
+++ b/nbs/packaging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,12 +55,12 @@
     "\n",
     "import yaml\n",
     "from fastcore.script import call_parse\n",
-    "from nbdev.export import Config"
+    "from nbdev.export import get_config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
     "    except:\n",
     "        print(\"Pigar dependency is not installed - not able to determine dependencies\")\n",
     "        return\n",
-    "    lib_path = Config().path(\"lib_path\")\n",
+    "    lib_path = get_config().path(\"lib_path\")\n",
     "    if out_dir is None:\n",
     "        out_dir = lib_path.resolve().parent\n",
     "\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pigar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git_path = \"/home/jovyan/git/sciflow/.git\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_git_config2(path):\n",
+    "    \"\"\"Parse git config file.\"\"\"\n",
+    "    config = dict()\n",
+    "    section = None\n",
+    "\n",
+    "    with open(os.path.join(path, \"config\"), \"r\") as f:\n",
+    "        for line in f:\n",
+    "            line = line.strip()\n",
+    "            if line.startswith(\"[\"):\n",
+    "                section = line[1:-1].strip()\n",
+    "                config[section] = dict()\n",
+    "            elif section:\n",
+    "                key, value = line.replace(\" \", \"\").split(\"=\", 1)\n",
+    "                config[section][key] = value\n",
+    "    return config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pigar.helpers.parse_git_config = parse_git_config2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +292,7 @@
     "    project_dir: Path = None, output_filename: str = \"settings.ini\"\n",
     "):\n",
     "    if project_dir is None:\n",
-    "        lib_path = Config().path(\"lib_path\")\n",
+    "        lib_path = get_config().path(\"lib_path\")\n",
     "        project_dir = lib_path.resolve().parent\n",
     "\n",
     "    config = ConfigParser(delimiters=[\"=\"])\n",
@@ -261,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,15 +379,15 @@
     "\n",
     "def create_conda_meta_file(project_dir: Path = None, out_file: str = \"meta.yaml\"):\n",
     "    if project_dir is None:\n",
-    "        lib_path = Config().path(\"lib_path\")\n",
+    "        lib_path = get_config().path(\"lib_path\")\n",
     "        project_dir = lib_path.resolve().parent\n",
     "\n",
     "    meta_data = {\n",
     "        \"package\": {\n",
-    "            \"name\": Config().get(\"lib_name\"),\n",
-    "            \"version\": Config().get(\"version\"),\n",
+    "            \"name\": get_config().get(\"lib_name\"),\n",
+    "            \"version\": get_config().get(\"version\"),\n",
     "        },\n",
-    "        \"source\": {\"path\": str(Config().path(\"lib_path\").resolve().parent)},\n",
+    "        \"source\": {\"path\": str(get_config().path(\"lib_path\").resolve().parent)},\n",
     "        \"requirements\": {\n",
     "            \"host\": [\"pip\", \"python\", \"setuptools\"],\n",
     "            \"run\": determine_dependencies(out_dir=project_dir).split(\" \"),\n",
@@ -349,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,9 +431,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated library requirements for conda & nbdev\n"
+     ]
+    }
+   ],
    "source": [
     "sciflow_update_reqs()"
    ]
@@ -399,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,8 +490,8 @@
     "        \"artifactory_token\": urlparse(conda_url).netloc.split(\":\")[1].split(\"@\")[0],\n",
     "        \"artifactory_url\": urlparse(conda_url).netloc.split(\":\")[1].split(\"@\")[1],\n",
     "        \"artifactory_conda_channel\": \"conda-local\",\n",
-    "        \"lib_name\": Config().lib_name,\n",
-    "        \"version\": Config().version,\n",
+    "        \"lib_name\": get_config().get(\"lib_name\"),\n",
+    "        \"version\": get_config().get(\"version\"),\n",
     "        \"build_number\": 0,\n",
     "    }\n",
     "    return deployment"
@@ -441,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,9 +553,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['eval \"$(conda shell.bash hook)\"\\n',\n",
+       " 'source .bashrc 2>/dev/null\\n',\n",
+       " 'export ARTIFACTORY_USER=nexus_eut_svc\\n',\n",
+       " 'export ARTIFACTORY_PASSWORD=AKCp8hzCxcyh1Uh9s4LMNZKmEHY1V4jwUhfqRsEUvdvMNZKhyncwt8MTtzwaq2rZkhx6dxW3e\\n',\n",
+       " 'export ARTIFACTORY_URL=ndartifactory.jfrog.io\\n',\n",
+       " 'export ARTIFACTORY_CONDA_CHANNEL=conda-local\\n',\n",
+       " 'export LIB_NAME=sciflow\\n',\n",
+       " 'export VERSION=0.0.1\\n',\n",
+       " 'export BUILD_NUMBER=0\\n']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lines = write_art_conda_envs_to_file()\n",
     "lines"
@@ -505,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,19 +662,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert \"conda-local\" == os.environ[\"ARTIFACTORY_CONDA_CHANNEL\"]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -605,6 +675,18 @@
    "display_name": "Python [conda env:sciflow]",
    "language": "python",
    "name": "conda-env-sciflow-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
