--- a/nbs/utils.ipynb
+++ b/nbs/utils.ipynb
@@ -25,16 +25,16 @@
    "source": [
     "# export\n",
     "\n",
+    "import ast\n",
     "import os\n",
     "from pathlib import Path\n",
-    "import ast\n",
-    "import _ast\n",
     "\n",
+    "import _ast\n",
+    "import nbformat\n",
     "import pandas as pd\n",
     "import pyodbc\n",
-    "import nbformat\n",
-    "from nbqa.find_root import find_project_root\n",
-    "from nbdev.export import read_nb, find_default_export, get_config"
+    "from nbdev.export import find_default_export, get_config, read_nb\n",
+    "from nbqa.find_root import find_project_root"
    ]
   },
   {
@@ -144,7 +144,7 @@
     "    nb, module_path = load_nb(nb_path)\n",
     "    with open(module_path, \"r\") as module_file:\n",
     "        lines = module_file.readlines()\n",
-    "    module_code = '\\n'.join(lines)\n",
+    "    module_code = \"\\n\".join(lines)\n",
     "    return nb, module_code"
    ]
   },
