--- a/nbs/clean.ipynb
+++ b/nbs/clean.ipynb
@@ -25,11 +25,12 @@
    "source": [
     "# export\n",
     "\n",
+    "from pathlib import Path\n",
+    "\n",
     "from fastcore.script import Param, bool_arg, call_parse\n",
     "from fastcore.utils import ifnone\n",
     "from nbdev.clean import rm_execution_count\n",
-    "from nbdev.export import nbglob\n",
-    "from pathlib import Path"
+    "from nbdev.export import nbglob"
    ]
   },
   {
